force-app/main/default/objects/Knowledge_Article__kav/fields/Approved_From_Content_Manager__c.field-meta.xml
<CustomField>
    <fullName>Approved_From_Content_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved From Content Manager</label>
    <type>Checkbox</type>
</CustomField>