force-app/main/default/objects/Knowledge_Article__kav/fields/Article_Submitter_Name__c.field-meta.xml
<CustomField>
    <fullName>Article_Submitter_Name__c</fullName>
    <formula>CreatedBy.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Article Submitter Name</label>
    <type>Text</type>
</CustomField>