force-app/main/default/objects/Knowledge_Article__kav/fields/Article_Type__c.field-meta.xml
<CustomField>
    <fullName>Article_Type__c</fullName>
    <label>Article Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>