force-app/main/default/objects/Knowledge_Article__kav/fields/Article_URL__c.field-meta.xml
<CustomField>
    <fullName>Article_URL__c</fullName>
    <label>Article URL</label>
    <type>Url</type>
</CustomField>