force-app/main/default/objects/Knowledge_Article__kav/fields/Canada_Related_Article__c.field-meta.xml
<CustomField>
    <fullName>Canada_Related_Article__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Canada Related Article</label>
    <type>Checkbox</type>
</CustomField>