force-app/main/default/objects/Knowledge_Article__kav/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category Deleted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Components</fullName>
            </value>
            <value>
                <fullName>Dimensions</fullName>
            </value>
            <value>
                <fullName>Function and Features</fullName>
            </value>
            <value>
                <fullName>How to Use</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Fittings</fullName>
            </value>
            <value>
                <fullName>Flushing System</fullName>
            </value>
            <value>
                <fullName>Drainline Carry</fullName>
            </value>
            <value>
                <fullName>Dual-Injection Flush Valves</fullName>
            </value>
            <value>
                <fullName>Rough-In with Tiled Wall</fullName>
            </value>
            <value>
                <fullName>Water Spot</fullName>
            </value>
            <value>
                <fullName>Mixing Cleaner/Fresh Infuser/Lysol Cleaner</fullName>
            </value>
            <value>
                <fullName>Cleaner Swallowed</fullName>
            </value>
            <value>
                <fullName>Cleaner in Eyes</fullName>
            </value>
            <value>
                <fullName>Cleaner on Skin</fullName>
            </value>
            <value>
                <fullName>Cleaner Life</fullName>
            </value>
            <value>
                <fullName>Cleaner Level</fullName>
            </value>
            <value>
                <fullName>Cleaner Scent</fullName>
            </value>
            <value>
                <fullName>Cleaner - Safe Septic System</fullName>
            </value>
            <value>
                <fullName>Toilet Cleaning</fullName>
            </value>
            <value>
                <fullName>Cleaner Fragrance Does&#39;nt Last</fullName>
            </value>
            <value>
                <fullName>Low Flow Faucets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>