force-app/main/default/objects/Knowledge_Article__kav/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification Deleted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Toilet</fullName>
            </value>
            <value>
                <fullName>Bath</fullName>
            </value>
            <value>
                <fullName>Bazaar Voice</fullName>
            </value>
            <value>
                <fullName>Kitchen Faucet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>