force-app/main/default/objects/Knowledge_Article__kav/fields/Content_Manager__c.field-meta.xml
<CustomField>
    <fullName>Content_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Content Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Knowledge_Articles</relationshipName>
    <type>Lookup</type>
</CustomField>