force-app/main/default/objects/Knowledge_Article__kav/fields/Customer_Success_HOD__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_HOD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Success HOD</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Knowledge_Articles2</relationshipName>
    <type>Lookup</type>
</CustomField>