force-app/main/default/objects/Knowledge_Article__kav/fields/In_Approval__c.field-meta.xml
<CustomField>
    <fullName>In_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Approval</label>
    <type>Checkbox</type>
</CustomField>