force-app/main/default/objects/Knowledge_Article__kav/fields/Issue_Type_del__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type_del__c</fullName>
    <label>Issue Type - Deleted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Find Repair Part</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>