force-app/main/default/objects/Knowledge_Article__kav/fields/Process_SOP_Manager__c.field-meta.xml
<CustomField>
    <fullName>Process_SOP_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>(Process/SOP Manager)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Knowledge_Articles4</relationshipName>
    <type>Lookup</type>
</CustomField>