force-app/main/default/objects/Knowledge_Article__kav/fields/Process_SOP_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Process_SOP_Manager_Name__c</fullName>
    <formula>Process_SOP_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process SOP Manager Name</label>
    <type>Text</type>
</CustomField>