force-app/main/default/objects/Knowledge_Article__kav/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product - Deleted</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Knowledge Articles</relationshipLabel>
    <relationshipName>Knowledge_Articles</relationshipName>
    <type>Lookup</type>
</CustomField>