force-app/main/default/objects/Knowledge_Article__kav/fields/Product_Information__c.field-meta.xml
<CustomField>
    <fullName>Product_Information__c</fullName>
    <defaultValue>&quot;MATERIAL NUMBER:&quot;&amp; BR() &amp;
&quot;Description:&quot;&amp; BR() &amp;
&quot;Marketing Description:&quot;&amp; BR() &amp;
&quot;Brand:&quot;&amp; BR() &amp;
&quot;MODEL NUMBER:&quot;&amp; BR() &amp;
&quot;Family:&quot;</defaultValue>
    <label>Product Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>