force-app/main/default/objects/Knowledge_Article__kav/fields/Product_Manager__c.field-meta.xml
<CustomField>
    <fullName>Product_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Knowledge_Articles1</relationshipName>
    <type>Lookup</type>
</CustomField>