force-app/main/default/objects/Knowledge_Article__kav/fields/Product_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Manager_Name__c</fullName>
    <formula>Product_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Manager Name</label>
    <type>Text</type>
</CustomField>