force-app/main/default/objects/Knowledge_Article__kav/fields/Product_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Type__c</fullName>
    <label>Product Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Product_Sub_Type</valueSetName>
    </valueSet>
</CustomField>