force-app/main/default/objects/Knowledge_Article__kav/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <defaultValue>If( CONTAINS($Profile.Name, &#39;Grohe&#39;) ,&#39;Grohe&#39;,&#39;&#39;)</defaultValue>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Type</valueSetName>
    </valueSet>
</CustomField>