force-app/main/default/objects/Knowledge_Article__kav/fields/Product_Type_Del__c.field-meta.xml
<CustomField>
    <fullName>Product_Type_Del__c</fullName>
    <label>Product Type Deleted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Centerset</fullName>
            </value>
            <value>
                <fullName>Widespread</fullName>
            </value>
            <value>
                <fullName>Edgemere</fullName>
            </value>
            <value>
                <fullName>Colony/ Reliant/ Mainstream</fullName>
            </value>
            <value>
                <fullName>Cadet</fullName>
            </value>
            <value>
                <fullName>Champion</fullName>
            </value>
            <value>
                <fullName>VorMax</fullName>
            </value>
            <value>
                <fullName>VorMax Plus</fullName>
            </value>
            <value>
                <fullName>ActiClean</fullName>
            </value>
            <value>
                <fullName>ActiVate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>