force-app/main/default/objects/Knowledge_Article__kav/fields/Specific_Issue__c.field-meta.xml
<CustomField>
    <fullName>Specific_Issue__c</fullName>
    <label>Specific Issue Deleted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plumber/DIY</fullName>
            </value>
            <value>
                <fullName>Gasket</fullName>
            </value>
            <value>
                <fullName>Drain</fullName>
            </value>
            <value>
                <fullName>Operating Pressure (PSI)</fullName>
            </value>
            <value>
                <fullName>Counter Thickness</fullName>
            </value>
            <value>
                <fullName>Aerator</fullName>
            </value>
            <value>
                <fullName>Backsplash</fullName>
            </value>
            <value>
                <fullName>Product Number</fullName>
            </value>
            <value>
                <fullName>Ceramic Disk Valves</fullName>
            </value>
            <value>
                <fullName>Shank Extensions</fullName>
            </value>
            <value>
                <fullName>Faucet Material</fullName>
            </value>
            <value>
                <fullName>Supply Lines</fullName>
            </value>
            <value>
                <fullName>Speed Connect Hoses</fullName>
            </value>
            <value>
                <fullName>8&quot; Centers</fullName>
            </value>
            <value>
                <fullName>Water leaks into Bowl</fullName>
            </value>
            <value>
                <fullName>Spray head won&#39;t retract</fullName>
            </value>
            <value>
                <fullName>Handle Rotating</fullName>
            </value>
            <value>
                <fullName>Check Valve Cleaning</fullName>
            </value>
            <value>
                <fullName>Replace Pull Out Hose</fullName>
            </value>
            <value>
                <fullName>Replace Quick Coupler</fullName>
            </value>
            <value>
                <fullName>Toilet Bowl</fullName>
            </value>
            <value>
                <fullName>Toilet Tank</fullName>
            </value>
            <value>
                <fullName>Change Flush Valve</fullName>
            </value>
            <value>
                <fullName>Change Blue Seal</fullName>
            </value>
            <value>
                <fullName>Prime Toilet</fullName>
            </value>
            <value>
                <fullName>Adjust Teeter Bar</fullName>
            </value>
            <value>
                <fullName>How do you clean?</fullName>
            </value>
            <value>
                <fullName>What do I clean toilet with?</fullName>
            </value>
            <value>
                <fullName>How to Flush out Water Control</fullName>
            </value>
            <value>
                <fullName>How to change a one piece Flush Valve</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>