force-app/main/default/objects/Knowledge_Article__kav/fields/Technical_Support_HOD__c.field-meta.xml
<CustomField>
    <fullName>Technical_Support_HOD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technical Support HOD</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Knowledge_Articles3</relationshipName>
    <type>Lookup</type>
</CustomField>