force-app/main/default/objects/Knowledge_Article__kav/fields/Technical_Support_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Technical_Support_Submitter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Technical Support Submitter</label>
    <type>Checkbox</type>
</CustomField>