force-app/main/default/objects/Knowledge_Article__kav/recordTypes/Internal_Document.recordType-meta.xml
<RecordType>
    <fullName>Internal_Document</fullName>
    <active>true</active>
    <description>Standard Operating Procedures for Internal Use (SOPs)</description>
    <label>Internal Document</label>
</RecordType>