force-app/main/default/objects/Knowledge_Article__kav/recordTypes/Product_Document.recordType-meta.xml
<RecordType>
    <fullName>Product_Document</fullName>
    <active>true</active>
    <description>Product related documents such as Product Specifications, Price Lists</description>
    <label>Product Document</label>
</RecordType>