force-app/main/default/objects/Knowledge_Article__kav/recordTypes/Support_Document.recordType-meta.xml
<RecordType>
    <fullName>Support_Document</fullName>
    <active>true</active>
    <description>FAQs, Solution Articles</description>
    <label>Support Document</label>
</RecordType>