force-app/main/default/objects/Knowledge_Article__kav/listViews/Most_Viewed.listView-meta.xml
<ListView>
    <fullName>Most_Viewed</fullName>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <filterScope>Everything</filterScope>
    <label>Sorted By Published Date</label>
</ListView>