force-app/main/default/objects/Knowledge_Article__kav/listViews/Sorted_By_Rating.listView-meta.xml
<ListView>
    <fullName>Sorted_By_Rating</fullName>
    <columns>ARTICLE_TOTAL_VIEW_COUNT</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Sorted By Rating</label>
</ListView>